# AIMLAB-Unity-Chai3D-VR

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  CPP_FILES_TREE.txt  IMPLEMENTATION_SUMMARY.md  LICENSE  PROJECT_STATUS.md  PROJECT_TREE.txt  PROJECT_TREE_COMPLETE.txt  QUICKSTART.md  README.md  build-project.ps1  rebuild.ps1  run-demos.ps1  run-official-demos.ps1  run.ps1  setup-chai3d.ps1
docs/: API_REFERENCE.md  BUILD_GUIDE.md  DEVELOPMENT.md  INVERSE3_PROTOCOL_NOTES.md  README.md  REAL_WORLD_SETUP_GUIDE.md  SETUP_INSTRUCTIONS.md  TROUBLESHOOTING.md  USING_OFFICIAL_CHAI3D.md
resources/: .gitkeep
src/: CMakeLists.txt  main.cpp
